Cannot select a light before objects. Selection priority issue. #59155

Closed
opened 2018-12-11 01:14:41 +01:00 by Yegor · 8 comments

System Information
Operating system: Mint
Graphics card: Nvidia GTX 1080ti

Blender Version
Broken: 2.80 168a6a4bfc
Worked: 2.79 any version

Short description of error
Cannot select a light source if there are objects behind it. It seems that selection priority is higher for meshes.
You can cycle click trough objects until it hits the light or use alt+click to select, but it's very inconvenient in comparison to 2.79.

Exact steps for others to reproduce the error
Open up the file.
Try to select the light source with a single click.
280_selection_priority.blend

**System Information** Operating system: Mint Graphics card: Nvidia GTX 1080ti **Blender Version** Broken: 2.80 168a6a4bfc1 Worked: 2.79 any version **Short description of error** Cannot select a light source if there are objects behind it. It seems that selection priority is higher for meshes. You can cycle click trough objects until it hits the light or use alt+click to select, but it's very inconvenient in comparison to 2.79. **Exact steps for others to reproduce the error** Open up the file. Try to select the light source with a single click. [280_selection_priority.blend](https://archive.blender.org/developer/F5915815/280_selection_priority.blend)

#58300 was marked as duplicate of this issue

#58300 was marked as duplicate of this issue
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Campbell Barton self-assigned this 2018-12-11 01:33:12 +01:00

Added subscribers: @SergeyIvanov, @JacquesLucke

Added subscribers: @SergeyIvanov, @JacquesLucke

Using occlusion queries causes this, enabling opengl depth picking resolves.

@brecht was this tested in the studio - are there any reasons not to use it by default?

Using occlusion queries causes this, enabling opengl depth picking resolves. @brecht was this tested in the studio - are there any reasons not to use it by default?

Added subscriber: @brecht

Added subscriber: @brecht

@ideasman42, it's being used at the studio. Julien says the behavior is vastly better, animators are using it too.

I think we should enable this by default and for existing saved preferences, without this selection just seems buggy to me.

@ideasman42, it's being used at the studio. Julien says the behavior is vastly better, animators are using it too. I think we should enable this by default and for existing saved preferences, without this selection just seems buggy to me.

This issue was referenced by ee3d8cafdd

This issue was referenced by ee3d8cafdd4d90d0694ae4870f5b13d507737dab

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59155
No description provided.