source/blender/makesrna/intern/rna_userdef.c
@@ -4428,7 +4428,7 @@ static void rna_def_userdef_system(BlenderRNA *brna)
 	RNA_def_property_update(prop, 0, "rna_userdef_dpi_update");
 
 	prop = RNA_def_property(srna, "use_edit_mode_smooth_wire", PROP_BOOLEAN, PROP_NONE);
-	RNA_def_property_boolean_sdna(prop, NULL, "uiflag2", USER_EDIT_MODE_SMOOTH_WIRE);
+	RNA_def_property_boolean_negative_sdna(prop, NULL, "gpu_flag", USER_GPU_FLAG_NO_EDIT_MODE_SMOOTH_WIRE);
 	RNA_def_property_ui_text(prop, "Edit-Mode Smooth Wires",
 	                         "Enable Edit-Mode edge smoothing, reducing aliasing, requires restart");
 	RNA_def_property_update(prop, 0, "rna_userdef_dpi_update");
@@ -4516,8 +4516,11 @@ static void rna_def_userdef_system(BlenderRNA *brna)
 	/* Select */
 
 	prop = RNA_def_property(srna, "use_select_pick_depth", PROP_BOOLEAN, PROP_NONE);
-	RNA_def_property_boolean_sdna(prop, NULL, "gpu_select_pick_deph", 1);
-	RNA_def_property_ui_text(prop, "OpenGL Depth Picking", "Use the depth buffer for picking 3D View selection");
+	RNA_def_property_boolean_negative_sdna(prop, NULL, "gpu_flag", USER_GPU_FLAG_NO_DEPT_PICK);
+	RNA_def_property_ui_text(
+	        prop, "OpenGL Depth Picking",
+	        "Use the depth buffer for picking 3D View selection "
+	        "(without this the front most object may not be selected first)");
 
 	/* Audio */
 
